--- a/tests/wpt/meta/IndexedDB/idb-explicit-commit-throw.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idb-explicit-commit-throw.any.js.ini
@@ -1,8 +1,10 @@
 [idb-explicit-commit-throw.any.html]
+  expected: TIMEOUT
   [Any errors in callbacks that run after an explicit commit will not stop the commit from being processed.]
-    expected: FAIL
+    expected: TIMEOUT
 
 
 [idb-explicit-commit-throw.any.worker.html]
+  expected: TIMEOUT
   [Any errors in callbacks that run after an explicit commit will not stop the commit from being processed.]
-    expected: FAIL
+    expected: TIMEOUT
