--- a/tests/wpt/meta/IndexedDB/idb-explicit-commit.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idb-explicit-commit.any.js.ini
@@ -1,4 +1,5 @@
 [idb-explicit-commit.any.worker.html]
+  expected: ERROR
   [Explicitly committed data can be read back out.]
     expected: FAIL
 
@@ -30,10 +31,11 @@
     expected: FAIL
 
   [Transactions that handle all errors properly should behave as expected when an explicit commit is called in an onerror handler.]
-    expected: FAIL
+    expected: TIMEOUT
 
 
 [idb-explicit-commit.any.html]
+  expected: ERROR
   [Explicitly committed data can be read back out.]
     expected: FAIL
 
@@ -65,4 +67,4 @@
     expected: FAIL
 
   [Transactions that handle all errors properly should behave as expected when an explicit commit is called in an onerror handler.]
-    expected: FAIL
+    expected: TIMEOUT
