--- a/tests/wpt/meta/IndexedDB/idbobjectstore_createIndex.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbobjectstore_createIndex.any.js.ini
@@ -27,16 +27,10 @@
   [IDBObjectStore.createIndex() - empty name]
     expected: FAIL
 
-  [If an index with the name name already exists in this object store, the implementation must throw a DOMException of type ConstraintError]
-    expected: FAIL
-
   [If keyPath is not a valid key path, the implementation must throw a DOMException of type SyntaxError]
     expected: FAIL
 
   [If the object store has been deleted, the implementation must throw a DOMException of type InvalidStateError]
-    expected: FAIL
-
-  [Operate out versionchange throw InvalidStateError]
     expected: FAIL
 
   [InvalidStateError(Incorrect mode) vs. TransactionInactiveError. Mode check should precede state check of the transaction.]
@@ -46,10 +40,7 @@
     expected: TIMEOUT
 
   [TransactionInactiveError vs. ConstraintError. Transaction-state check should precede index name check.]
-    expected: FAIL
-
-  [ConstraintError vs. SyntaxError. Index name check should precede syntax check of the key path]
-    expected: FAIL
+    expected: TIMEOUT
 
   [SyntaxError vs. InvalidAccessError. Syntax check should precede multiEntry check of the key path.]
     expected: FAIL
@@ -99,16 +90,10 @@
   [IDBObjectStore.createIndex() - empty name]
     expected: FAIL
 
-  [If an index with the name name already exists in this object store, the implementation must throw a DOMException of type ConstraintError]
-    expected: FAIL
-
   [If keyPath is not a valid key path, the implementation must throw a DOMException of type SyntaxError]
     expected: FAIL
 
   [If the object store has been deleted, the implementation must throw a DOMException of type InvalidStateError]
-    expected: FAIL
-
-  [Operate out versionchange throw InvalidStateError]
     expected: FAIL
 
   [InvalidStateError(Incorrect mode) vs. TransactionInactiveError. Mode check should precede state check of the transaction.]
@@ -118,10 +103,7 @@
     expected: TIMEOUT
 
   [TransactionInactiveError vs. ConstraintError. Transaction-state check should precede index name check.]
-    expected: FAIL
-
-  [ConstraintError vs. SyntaxError. Index name check should precede syntax check of the key path]
-    expected: FAIL
+    expected: TIMEOUT
 
   [SyntaxError vs. InvalidAccessError. Syntax check should precede multiEntry check of the key path.]
     expected: FAIL
