--- a/tests/wpt/meta/IndexedDB/reading-autoincrement-indexes-cursors.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/reading-autoincrement-indexes-cursors.any.js.ini
@@ -1,15 +1,16 @@
 [reading-autoincrement-indexes-cursors.any.worker.html]
+  expected: TIMEOUT
   [IDBIndex.openCursor() iterates over an index on the autoincrement key]
-    expected: FAIL
+    expected: TIMEOUT
 
   [IDBIndex.openKeyCursor() iterates over an index on the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.openCursor() iterates over an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.openKeyCursor() iterates over an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [reading-autoincrement-indexes-cursors.any.serviceworker.html]
@@ -19,14 +20,15 @@
   expected: ERROR
 
 [reading-autoincrement-indexes-cursors.any.html]
+  expected: TIMEOUT
   [IDBIndex.openCursor() iterates over an index on the autoincrement key]
-    expected: FAIL
+    expected: TIMEOUT
 
   [IDBIndex.openKeyCursor() iterates over an index on the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.openCursor() iterates over an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.openKeyCursor() iterates over an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
