--- a/tests/wpt/meta/IndexedDB/reading-autoincrement-store-cursors.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/reading-autoincrement-store-cursors.any.js.ini
@@ -1,17 +1,19 @@
 [reading-autoincrement-store-cursors.any.worker.html]
+  expected: TIMEOUT
   [IDBObjectStore.openCursor() iterates over an autoincrement store]
-    expected: FAIL
+    expected: TIMEOUT
 
   [IDBObjectStore.openKeyCursor() iterates over an autoincrement store]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [reading-autoincrement-store-cursors.any.html]
+  expected: TIMEOUT
   [IDBObjectStore.openCursor() iterates over an autoincrement store]
-    expected: FAIL
+    expected: TIMEOUT
 
   [IDBObjectStore.openKeyCursor() iterates over an autoincrement store]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [reading-autoincrement-store-cursors.any.sharedworker.html]
