--- a/tests/wpt/meta/IndexedDB/reading-autoincrement-store.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/reading-autoincrement-store.any.js.ini
@@ -5,22 +5,24 @@
   expected: ERROR
 
 [reading-autoincrement-store.any.worker.html]
+  expected: TIMEOUT
   [IDBObjectStore.getAll() for an autoincrement store]
-    expected: FAIL
+    expected: TIMEOUT
 
   [IDBObjectStore.getAllKeys() for an autoincrement store]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBObjectStore.get() for an autoincrement store]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [reading-autoincrement-store.any.html]
+  expected: TIMEOUT
   [IDBObjectStore.getAll() for an autoincrement store]
-    expected: FAIL
+    expected: TIMEOUT
 
   [IDBObjectStore.getAllKeys() for an autoincrement store]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBObjectStore.get() for an autoincrement store]
-    expected: FAIL
+    expected: NOTRUN
