--- a/tests/wpt/meta/IndexedDB/reading-autoincrement-indexes.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/reading-autoincrement-indexes.any.js.ini
@@ -1,21 +1,22 @@
 [reading-autoincrement-indexes.any.html]
+  expected: TIMEOUT
   [IDBIndex.getAll() for an index on the autoincrement key]
-    expected: FAIL
+    expected: TIMEOUT
 
   [IDBIndex.getAllKeys() for an index on the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.get() for an index on the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.getAll() for an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.getAllKeys() returns correct result for an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.get() for an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [reading-autoincrement-indexes.any.sharedworker.html]
@@ -25,20 +26,21 @@
   expected: ERROR
 
 [reading-autoincrement-indexes.any.worker.html]
+  expected: TIMEOUT
   [IDBIndex.getAll() for an index on the autoincrement key]
-    expected: FAIL
+    expected: TIMEOUT
 
   [IDBIndex.getAllKeys() for an index on the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.get() for an index on the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.getAll() for an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.getAllKeys() returns correct result for an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
 
   [IDBIndex.get() for an index not covering the autoincrement key]
-    expected: FAIL
+    expected: NOTRUN
