--- a/tests/wpt/meta/IndexedDB/transaction-relaxed-durability.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/transaction-relaxed-durability.any.js.ini
@@ -1,38 +1,40 @@
 [transaction-relaxed-durability.any.html]
+  expected: TIMEOUT
   [Committed data can be read back out: case 0]
-    expected: FAIL
+    expected: TIMEOUT
 
   [Committed data can be read back out: case 1]
-    expected: FAIL
+    expected: NOTRUN
 
   [Committed data can be read back out: case 2]
-    expected: FAIL
+    expected: NOTRUN
 
   [Committed data can be read back out: case 3]
-    expected: FAIL
+    expected: NOTRUN
 
   [Committed data can be read back out: case 4]
-    expected: FAIL
+    expected: NOTRUN
 
   [Invalid durability option throws a TypeError]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [transaction-relaxed-durability.any.worker.html]
+  expected: TIMEOUT
   [Committed data can be read back out: case 0]
-    expected: FAIL
+    expected: TIMEOUT
 
   [Committed data can be read back out: case 1]
-    expected: FAIL
+    expected: NOTRUN
 
   [Committed data can be read back out: case 2]
-    expected: FAIL
+    expected: NOTRUN
 
   [Committed data can be read back out: case 3]
-    expected: FAIL
+    expected: NOTRUN
 
   [Committed data can be read back out: case 4]
-    expected: FAIL
+    expected: NOTRUN
 
   [Invalid durability option throws a TypeError]
-    expected: FAIL
+    expected: NOTRUN
