--- a/tests/wpt/meta/IndexedDB/upgrade-transaction-lifecycle-committed.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/upgrade-transaction-lifecycle-committed.any.js.ini
@@ -2,19 +2,21 @@
   expected: ERROR
 
 [upgrade-transaction-lifecycle-committed.any.worker.html]
+  expected: TIMEOUT
   [in the complete event handler for a committed transaction]
-    expected: FAIL
+    expected: TIMEOUT
 
   [in a setTimeout(0) callback after the complete event is fired for a committed transaction]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [upgrade-transaction-lifecycle-committed.any.sharedworker.html]
   expected: ERROR
 
 [upgrade-transaction-lifecycle-committed.any.html]
+  expected: TIMEOUT
   [in the complete event handler for a committed transaction]
-    expected: FAIL
+    expected: TIMEOUT
 
   [in a setTimeout(0) callback after the complete event is fired for a committed transaction]
-    expected: FAIL
+    expected: NOTRUN
