--- a/tests/wpt/meta/IndexedDB/upgrade-transaction-lifecycle-user-aborted.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/upgrade-transaction-lifecycle-user-aborted.any.js.ini
@@ -1,29 +1,31 @@
 [upgrade-transaction-lifecycle-user-aborted.any.worker.html]
+  expected: TIMEOUT
   [synchronously after abort() is called]
     expected: FAIL
 
   [in a promise microtask after abort() is called, before the transaction abort event is fired]
-    expected: FAIL
+    expected: TIMEOUT
 
   [in the abort event handler for a transaction aborted due to an abort() call]
-    expected: FAIL
+    expected: NOTRUN
 
   [in a setTimeout(0) callback after the abort event is fired for a transaction aborted due to an abort() call]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [upgrade-transaction-lifecycle-user-aborted.any.html]
+  expected: ERROR
   [synchronously after abort() is called]
     expected: FAIL
 
   [in a promise microtask after abort() is called, before the transaction abort event is fired]
-    expected: FAIL
+    expected: TIMEOUT
 
   [in the abort event handler for a transaction aborted due to an abort() call]
-    expected: FAIL
+    expected: NOTRUN
 
   [in a setTimeout(0) callback after the abort event is fired for a transaction aborted due to an abort() call]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [upgrade-transaction-lifecycle-user-aborted.any.sharedworker.html]
