--- a/tests/wpt/meta/IndexedDB/idb-explicit-commit.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idb-explicit-commit.any.js.ini
@@ -1,8 +1,5 @@
 [idb-explicit-commit.any.worker.html]
-  expected: ERROR
-  [Explicitly committed data can be read back out.]
-    expected: FAIL
-
+  expected: TIMEOUT
   [A committed transaction becomes inactive immediately.]
     expected: FAIL
 
@@ -25,20 +22,17 @@
     expected: FAIL
 
   [Transactions with same scope should stay in program order, even if one calls commit.]
-    expected: FAIL
+    expected: TIMEOUT
 
   [Transactions that explicitly commit and have errors should abort.]
-    expected: FAIL
+    expected: NOTRUN
 
   [Transactions that handle all errors properly should behave as expected when an explicit commit is called in an onerror handler.]
-    expected: TIMEOUT
+    expected: NOTRUN
 
 
 [idb-explicit-commit.any.html]
-  expected: ERROR
-  [Explicitly committed data can be read back out.]
-    expected: FAIL
-
+  expected: TIMEOUT
   [A committed transaction becomes inactive immediately.]
     expected: FAIL
 
@@ -61,10 +55,10 @@
     expected: FAIL
 
   [Transactions with same scope should stay in program order, even if one calls commit.]
-    expected: FAIL
+    expected: TIMEOUT
 
   [Transactions that explicitly commit and have errors should abort.]
-    expected: FAIL
+    expected: NOTRUN
 
   [Transactions that handle all errors properly should behave as expected when an explicit commit is called in an onerror handler.]
-    expected: TIMEOUT
+    expected: NOTRUN
