--- a/tests/wpt/meta/IndexedDB/idbcursor-continuePrimaryKey-exceptions.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbcursor-continuePrimaryKey-exceptions.any.js.ini
@@ -5,6 +5,9 @@
   [IDBCursor continuePrimaryKey() on "prevunique" cursor]
     expected: FAIL
 
+  [IDBCursor continuePrimaryKey() on object store cursor]
+    expected: FAIL
+
 
 [idbcursor-continuePrimaryKey-exceptions.any.sharedworker.html]
   expected: ERROR
