--- a/tests/wpt/meta/IndexedDB/idbcursor-request.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbcursor-request.any.js.ini
@@ -1,9 +1,10 @@
 [idbcursor-request.any.html]
+  expected: TIMEOUT
   [cursor.request from IDBObjectStore.openCursor]
-    expected: FAIL
+    expected: TIMEOUT
 
   [cursor.request from IDBObjectStore.openKeyCursor]
-    expected: FAIL
+    expected: TIMEOUT
 
   [cursor.request from IDBIndex.openCursor]
     expected: FAIL
@@ -13,11 +14,12 @@
 
 
 [idbcursor-request.any.worker.html]
+  expected: TIMEOUT
   [cursor.request from IDBObjectStore.openCursor]
-    expected: FAIL
+    expected: TIMEOUT
 
   [cursor.request from IDBObjectStore.openKeyCursor]
-    expected: FAIL
+    expected: TIMEOUT
 
   [cursor.request from IDBIndex.openCursor]
     expected: FAIL
