--- a/tests/wpt/meta/IndexedDB/idbindex_tombstones.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/idbindex_tombstones.any.js.ini
@@ -1,26 +1,28 @@
 [idbindex_tombstones.any.worker.html]
+  expected: TIMEOUT
   [Forward iteration over an index in a readonly transaction]
-    expected: FAIL
+    expected: TIMEOUT
 
   [Backward iteration over an index in a readonly transaction]
-    expected: FAIL
+    expected: NOTRUN
 
   [Forward iteration over an index in a readwrite transaction]
-    expected: FAIL
+    expected: NOTRUN
 
   [Backward iteration over an index in a readwrite transaction]
-    expected: FAIL
+    expected: NOTRUN
 
 
 [idbindex_tombstones.any.html]
+  expected: TIMEOUT
   [Forward iteration over an index in a readonly transaction]
-    expected: FAIL
+    expected: TIMEOUT
 
   [Backward iteration over an index in a readonly transaction]
-    expected: FAIL
+    expected: NOTRUN
 
   [Forward iteration over an index in a readwrite transaction]
-    expected: FAIL
+    expected: NOTRUN
 
   [Backward iteration over an index in a readwrite transaction]
-    expected: FAIL
+    expected: NOTRUN
