--- a/tests/wpt/meta/IndexedDB/key-conversion-exceptions.any.js.ini
+++ b/tests/wpt/meta/IndexedDB/key-conversion-exceptions.any.js.ini
@@ -20,10 +20,7 @@
   [IDBIndex openKeyCursor() method with throwing/invalid keys]
     expected: FAIL
 
-  [IDBIndex getAll() method with throwing/invalid keys]
-    expected: FAIL
-
-  [IDBIndex getAllKeys() method with throwing/invalid keys]
+  [IDBCursor continue() method with throwing/invalid keys]
     expected: FAIL
 
 
@@ -46,10 +43,7 @@
   [IDBIndex openKeyCursor() method with throwing/invalid keys]
     expected: FAIL
 
-  [IDBIndex getAll() method with throwing/invalid keys]
-    expected: FAIL
-
-  [IDBIndex getAllKeys() method with throwing/invalid keys]
+  [IDBCursor continue() method with throwing/invalid keys]
     expected: FAIL
 
 
